# XTetris

./: .gitignore  404.html  AVVIA GIOCO.bat  CHANGELOG  CHANGELOG.md  CMakeLists.txt  GUIDA-CLION-WINDOWS.md  GUIDA-MSYS2.md  GUIDA-SCRIPT-AUTOMATICO-WINDOWS.md  GUIDA-VSCODE-WINDOWS.md  GUIDA-WINDOWS-RAPIDA.md  GUIDA-WINDOWS.md  InstallationLog.txt  LICENSE  MENU-XTETRIS-WINDOWS.bat  README.md  TODO.md  index.html  installa-compila-windows.bat  installa-compila-windows.ps1  main.c  script.js  style.css
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: deploy-pages.yml  deploy.yml  deploy.yml_DISATTIVATO
Elements/: boolType.h  color_codes.h  colori.h  exit_modes.h  mystring.h  rotazioni.h  string.h
GameSetting/: menus.c  menus.h
GameSetting/Player/: player.c  player.h
PianoDiGioco/: pianodigioco.c  pianodigioco.h
Tetramino/: rotazioni.h  tetramino.c  tetramino.h
guide/: GUIDA-CLION-WINDOWS.md  GUIDA-MSYS2.md  GUIDA-SCRIPT-AUTOMATICO-WINDOWS.md  GUIDA-VSCODE-WINDOWS.md  GUIDA-WINDOWS-RAPIDA.md  GUIDA-WINDOWS.md
piboh-gpages/: 404.html  gpagesREADME.md  index.html  script.js
piboh-portable/: gitkeep.txt
piboh-portable/Notepad++Portable/: config.xml  langs.xml  session.xml  session.xml.inCaseOfCorruption.bak
piboh-portable/PowerShell-7.7.0-preview.2-win-x64/: RegisterManifest.ps1  (+6 more)
piboh-script/: apri-guide-windows.bat  disinstalla-dipendenze-windows.bat  disinstalla-dipendenze-windows.ps1  installa-compila-windows.bat  installa-compila-windows.ps1  pulisci-log-cache-windows.bat  verifica-integrita-windows.bat
(+40 files in other folders)
